--- a/common/css/base.css
+++ b/common/css/base.css
@@ -17,3 +17,10 @@
 .today {
     background-color: #ffffff
 }
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 48
+  }
