--- a/common/css/base.css
+++ b/common/css/base.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+body{
+    margin: 0;
+}
 .menu {
     text-align: right;
 }
@@ -29,8 +32,10 @@
     'GRAD' 0,
     'opsz' 48
 }
-.next_week {
-    text-align: right;
+div.week_select{
+    width: 88%;
+    margin: auto;
+    text-align: left;
 }
 table{
     border-collapse: collapse;
@@ -43,13 +48,14 @@ table.calender{
     width: 88%;
     margin: auto;
 }
-.table_time {
-    width: 11%;
+.table_day{
+    width: 11px;
     padding-left: 8px;
     padding-right: 8px;
 }
-.time_first {
-    text-align: left;
+.table_time {
+    padding-left: 8px;
+    padding-right: 8px;
 }
 @media (max-width:1150px) {
     .time_end{
@@ -58,5 +64,10 @@ table.calender{
     }
     .time_first{
         text-align: left;
+    }
+}
+@media (min-width:1150px){
+    .table_time{
+        text-align: center;
     }
 }
