--- a/common/css/menu.css
+++ b/common/css/menu.css
@@ -1,16 +1,35 @@
+@charset "UTF-8";
+@font-face {
+    font-family: 'Dela_Gothic_One';
+    src: url(../fonts/Dela_Gothic_One/DelaGothicOne-Regular.ttf);
+}
+
 header {
-    font-family:"游明朝体","ヒラギノ明朝 ProN", sans-serif;
-    color: #000;
-    background-color: #fff;
-    border-bottom: 1px solid rgb(20, 20, 20);
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    z-index: 2;
+    background: #fff url(../pic/k_on_header.jpg) no-repeat 0% 60%;
+    background-size: 100%;
+    border-bottom: 2px solid rgb(45, 45, 45);
     display: block;
 }
-h1 {
-    font-size: 30px;
+header h1 {
+    font-family: 'Dela_Gothic_One', serif;
+    font-weight: normal;
+    color: #fff;
+    -webkit-text-stroke: 2px #000;
+    font-size: 50px;
     text-align: center;
+    margin-top: 20px;
+}
+header a {
+    text-decoration: none;
+    z-index: 1;
 }
 nav {
     display: block;
+    position: fixed;
     top: 0;
     left: -80%;
     bottom: 0;
@@ -18,9 +37,8 @@ nav {
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
     transition: all .5s;
-    z-index: 3;
+    z-index: 4;
     opacity: 0;
 }
 .open nav {
@@ -48,7 +66,7 @@ nav .inner li {
     height: 32px;
     transition: all .5s;
     cursor: pointer;
-    z-index: 3;
+    z-index: 4;
 }
 .toggle_btn span {
     display: block;
@@ -56,7 +74,7 @@ nav .inner li {
     left: 0;
     width: 40px;
     height: 4px;
-    background-color: #555;
+    background-color: #fff;
     border-radius: 2px;
     transition: all .5s;
 }
@@ -120,4 +138,10 @@ nav .inner li {
     overflow-y: hidden;
     max-height: 0;
     transition: all 0.5s;
+}
+@media (max-width:700px){
+    header h1{
+        font-size: 30px;
+        margin-top: 30px;
+    }
 }
