--- a/common/css/menu.css
+++ b/common/css/menu.css
@@ -17,11 +17,16 @@ header {
 header h1 {
     font-family: 'Dela_Gothic_One', serif;
     font-weight: normal;
-    color: #fff;
-    -webkit-text-stroke: 2px #000;
+    width: 420px;
     font-size: 50px;
     text-align: center;
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.head {
+    color: #fff;
+    -webkit-text-stroke: 3px #000;
 }
 header a {
     text-decoration: none;
@@ -143,5 +148,6 @@ nav .inner li {
     header h1{
         font-size: 30px;
         margin-top: 30px;
+        width: 240px;
     }
 }
