--- a/common/css/base.css
+++ b/common/css/base.css
@@ -30,17 +30,23 @@ main {
 }
 .table_box{
     text-align: center;
-    padding: 20px 8px 4px;
+    padding: 10px 8px 4px;
 }
-.material-symbols-outlined {
+/* .material-symbols-outlined { なんかこの記述要らない？
     font-variation-settings:
     'FILL' 0,
     'wght' 300,
     'GRAD' 0,
     'opsz' 48
-}
+} */
 .circle {
-    color: #ff0000;
+    color: #0000f0;
+}
+.close {
+    color: #696969;
+}
+.change_history {
+    color: #f00000;
 }
 div.week_select{
     width: 88%;
